bk_ida/gccida/g1/get_exception_pointer
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_exception_pointer/src/except.c:1510:25: error: use of undeclared identifier 'machine_mode'
result = gen_reg_rtx( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4)); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_exception_pointer/src/obj/except.o] Error 1
